fixes #4386 fix datepicker is not completely visible. I wanted to fix this in JS but unfortunately the beforeShow event of the datepicker is not working and I did not find any other workaround. So fixing it this way

--- a/plugins/Annotations/stylesheets/annotations.less
+++ b/plugins/Annotations/stylesheets/annotations.less
@@ -78,6 +78,10 @@
     font-size: 14px;
 }
 
+.annotations table td.annotation-meta {
+  padding-bottom: 150px;
+}
+
 .annotation-user {
     font-style: italic;
     font-size: 11px;
